Closed
Bug 1234877
Opened 10 years ago
Closed 10 years ago
Browser URL bar does not collapse when scrolling the web page, hiding the bottom of the web page.
Categories
(Firefox OS Graveyard :: Gaia::Browser, defect)
Tracking
(blocking-b2g:2.6+, firefox46 fixed, b2g-v2.5 unaffected, b2g-master verified)
VERIFIED
FIXED
| blocking-b2g | 2.6+ |
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | fixed |
| b2g-v2.5 | --- | unaffected |
| b2g-master | --- | verified |
People
(Reporter: Marty, Assigned: mstange)
References
()
Details
(Keywords: regression, Whiteboard: [2.6-Daily-Testing][Spark][systemsfe][dogfood-blocker])
Attachments
(2 files)
Description:
When the user scrolls down on a web page, the URL address bar does not collapse. This prevents the user from seeing the very bottom of the web page, as it is hidden below the bottom of the screen.
This issue does not occur on Pinned Sites, where the URL bar is automatically collapsed.
Repro Steps:
1) Update a Aries to 20151223122247
2) Open the Browser app and perform a google search for YouTube
3) Scroll down to the bottom of the page
Actual:
The URL bar does not collapse when scrolled down, and the bottom of the web page is not visible.
Expected:
The URL bar collapses when scrolling down, and the bottom of hte web page is visible.
Environmental Variables:
Device: Aries 2.6
Build ID: 20151223122247
Gaia: 94cc99aac11339e297da186ec7153ca4ae9ab8cd
Gecko: 35b211eaad1fa828064514c547057e4400e24459
Gonk: a19052e4389c3ae2d8fc3e7a74a475401baacc56
Version: 46.0a1 (2.6)
Firmware Version: D5803_23.1.A.1.28_NCB.ftf
User Agent: Mozilla/5.0 (Mobile; rv:46.0) Gecko/46.0 Firefox/46.0
Repro frequency: 10/10
See attached: Logcat, Video
| Reporter | ||
Comment 1•10 years ago
|
||
This issue DOES occur on the latest Flame 2.6 build.
The URL bar does not collapse when scrolled down, and the bottom of the web page is not visible.
Environmental Variables:
Device: FlameKK 2.6 (512MB)
Build ID: 20151223030206
Gaia: 94cc99aac11339e297da186ec7153ca4ae9ab8cd
Gecko: 35b211eaad1fa828064514c547057e4400e24459
Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a
Version: 46.0a1 (2.6)
Firmware Version: v18D
User Agent: Mozilla/5.0 (Mobile; rv:46.0) Gecko/46.0 Firefox/46.0
*******************************************
This issue does NOT occur on the latest Flame 2.5 build.
The URL bar collapses when scrolling down, and the bottom of hte web page is visible.
Environmental Variables:
Device: FlameKK 2.5 (512MB)
BuildID: 20151223152613
Gaia: 8db2cdd9eb9b42932c4dfc86d109b3e46c220809
Gecko: 6fac3536a96a87185a6415d6ae2c36a85612e863
Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a
Version: 44.0 (2.5)
Firmware Version: v18D
User Agent: Mozilla/5.0 (Mobile; rv:44.0) Gecko/44.0 Firefox/44.0
QA Whiteboard: [QAnalyst-Triage?][severe]
Flags: needinfo?(ktucker)
Updated•10 years ago
|
Keywords: regressionwindow-wanted
Updated•10 years ago
|
Whiteboard: [2.6-Daily-Testing][Spark] → [2.6-Daily-Testing][Spark][systemsfe]
Updated•10 years ago
|
blocking-b2g: --- → 2.6+
Comment 2•10 years ago
|
||
Mozilla-inbound Regression Window:
Last Working Environmental Variables:
Device: Flame KK master
Build ID 20151222083826
Gaia Revision f3cf488a97ecaec43369f3e3d8a7dda52be019f9
Gaia Date 2015-12-22 02:20:26
Gecko Revision https://hg.mozilla.org/integration/mozilla-inbound/rev/2ec54b38a33da939a8255612999d9e867eb11664
Gecko Version 46.0a1
Device Name flame
Firmware(Release) 4.4.2
Firmware(Incremental) eng.cltbld.20151222.071644
Firmware Date Tue Dec 22 07:16:57 EST 2015
Firmware Version v18D v4
Bootloader L1TC000118D0
First Broken Environmental Variables:
Device: Flame KK master
Build ID 20151222085329
Gaia Revision f3cf488a97ecaec43369f3e3d8a7dda52be019f9
Gaia Date 2015-12-22 02:20:26
Gecko Revision https://hg.mozilla.org/integration/mozilla-inbound/rev/bb5becd378f40a9be14e4e635d7034f2835fc7b5
Gecko Version 46.0a1
Device Name flame
Firmware(Release) 4.4.2
Firmware(Incremental) eng.cltbld.20151222.071644
Firmware Date Tue Dec 22 07:16:57 EST 2015
Firmware Version v18D v4
Bootloader L1TC000118D0
First Broken Gaia & Last Working Gecko - issue DOES NOT repro
Gaia Revision f3cf488a97ecaec43369f3e3d8a7dda52be019f9
Gecko Revision https://hg.mozilla.org/integration/mozilla-inbound/rev/2ec54b38a33da939a8255612999d9e867eb11664
First Broken Gecko & Last Working Gaia – issue DOES repro
Gaia Revision f3cf488a97ecaec43369f3e3d8a7dda52be019f9
Gecko Revision https://hg.mozilla.org/integration/mozilla-inbound/rev/bb5becd378f40a9be14e4e635d7034f2835fc7b5
Gecko pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2ec54b38a33da939a8255612999d9e867eb11664&tochange=bb5becd378f40a9be14e4e635d7034f2835fc7b5
Hi Markus,
This bug is probably caused by Bug 1147673, could you help to check?
Thank you.
QA Whiteboard: [QAnalyst-Triage?][severe] → [QAnalyst-Triage?][severe][MGSEI-Triage+]
Flags: needinfo?(mstange)
Keywords: regressionwindow-wanted
| Assignee | ||
Comment 3•10 years ago
|
||
I'll take a look once I have a working development phone again. Apparently my Flame's battery is busted, I've ordered a new one.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Flags: needinfo?(mstange)
Comment 4•10 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #3)
> I'll take a look once I have a working development phone again. Apparently
> my Flame's battery is busted, I've ordered a new one.
Did you get your flame yet or do you need some help?
Updated•10 years ago
|
QA Whiteboard: [QAnalyst-Triage?][severe][MGSEI-Triage+] → [QAnalyst-Triage+][severe][MGSEI-Triage+]
Flags: needinfo?(ktucker)
Updated•10 years ago
|
QA Whiteboard: [QAnalyst-Triage+][severe][MGSEI-Triage+] → [QAnalyst-Triage+][severe][MGSEI-Triage+][COM=Pin the Web]
Updated•10 years ago
|
Whiteboard: [2.6-Daily-Testing][Spark][systemsfe] → [2.6-Daily-Testing][Spark][systemsfe][dogfood-blocker]
| Assignee | ||
Comment 7•10 years ago
|
||
I've made some progress on this. Scrollgrab itself seems to work fine, but the RefLayerComposite no longer has frame metrics after bug 1147673 - APZ simply doesn't know anything about the outer scrollbox. Still trying to figure out why.
| Assignee | ||
Comment 8•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/29907/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/29907/
Attachment #8705235 -
Flags: review?(tnikkel)
Comment 9•10 years ago
|
||
Comment on attachment 8705235 [details]
MozReview Request: Bug 1234877 - Whether a scroll frame is async scrollable is determined by mWillBuildScrollableLayer, not by usingDisplayPort. r?tn
https://reviewboard.mozilla.org/r/29907/#review26753
Do we need usingDisplayPort at all in this function anymore then? Can we replace them all?
Attachment #8705235 -
Flags: review?(tnikkel) → review+
Comment 11•10 years ago
|
||
Comment 12•10 years ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #9)
> Do we need usingDisplayPort at all in this function anymore then? Can we
> replace them all?
If you agree we can do that in a followup bug.
Flags: needinfo?(mstange)
Comment 13•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
| Assignee | ||
Comment 15•10 years ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #12)
> (In reply to Timothy Nikkel (:tnikkel) from comment #9)
> > Do we need usingDisplayPort at all in this function anymore then? Can we
> > replace them all?
>
> If you agree we can do that in a followup bug.
I filed bug 1238514 about this.
Flags: needinfo?(mstange)
Comment 16•10 years ago
|
||
This issue is verified fixed on Flame 2.6 and Aries 2.6.
Environmental Variables:
Device: Aries 2.6 [Full Flash]
BuildID: 20160111111358
Gaia: 260e51a4262f75341e037e583dfc8f6835b5ab31
Gecko: 5acc2a44834ce0614f98466475e674517daf0041
Gonk: a19052e4389c3ae2d8fc3e7a74a475401baacc56
Version: 46.0a1 (2.6)
Firmware Version: D5803_23.1.A.1.28_NCB.ftf
User Agent: Mozilla/5.0 (Mobile; rv:46.0) Gecko/46.0 Firefox/46.0
Device: FlameKK 2.6 [Full Flash][512mb]
BuildID: 20160111030334
Gaia: 260e51a4262f75341e037e583dfc8f6835b5ab31
Gecko: 6020a4cb41a77a09484c24a5875bb221714c0e6a
Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a
Version: 46.0a1 (2.6)
Firmware Version: v18D v4
User Agent: Mozilla/5.0 (Mobile; rv:46.0) Gecko/46.0 Firefox/46.0
Result:
the URL bar collapses when the page is scrolled up.
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage+][severe][MGSEI-Triage+][COM=Pin the Web] → [QAnalyst-Triage?][severe][MGSEI-Triage+][COM=Pin the Web]
Flags: needinfo?(ktucker)
Updated•10 years ago
|
QA Whiteboard: [QAnalyst-Triage?][severe][MGSEI-Triage+][COM=Pin the Web] → [QAnalyst-Triage+][severe][MGSEI-Triage+][COM=Pin the Web]
Flags: needinfo?(ktucker)
You need to log in
before you can comment on or make changes to this bug.
Description
•