layout/generic/nsGfxScrollFrame.cpp
@@ -3111,7 +3111,7 @@ ScrollFrameHelper::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
       }
 
       DisplayListClipState::AutoSaveRestore clipStateForScrollClip(aBuilder);
-      if (usingDisplayPort) {
+      if (mWillBuildScrollableLayer) {
         if (mClipAllDescendants) {
           clipStateForScrollClip.TurnClipIntoScrollClipForContentDescendants(aBuilder, sf);
         } else {
@@ -3140,7 +3140,7 @@ ScrollFrameHelper::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
       }
 
       DisplayListClipState::AutoSaveRestore clipStateForScrollClip(aBuilder);
-      if (usingDisplayPort) {
+      if (mWillBuildScrollableLayer) {
         if (mClipAllDescendants) {
           clipStateForScrollClip.TurnClipIntoScrollClipForContentDescendants(aBuilder, sf);
         } else {
